--- a/app/bannerAds/add/view.html
+++ b/app/bannerAds/add/view.html
@@ -1,11 +1,11 @@
 <div class="container">
-  
+
   <div class="" style="display: none;"></div>
-  <div class="row"  >
+  <div class="row" ng-controller="BannerAdsCtrl as $ctrl">
     <!-- Left Section  -->
     <profile-nav-section></profile-nav-section>
 
     <!-- Right Section  -->
-    <banner-ads-list ></banner-ads-list>
+    <banner-ads-add-main></banner-ads-add-main>
   </div>
 </div>
