--- a/app/sponsorAds/edit/view.html
+++ b/app/sponsorAds/edit/view.html
@@ -1,11 +1,11 @@
 <div class="container">
-  
+
   <div class="" style="display: none;"></div>
-  <div class="row"  >
+  <div class="row" ng-controller="SponsorAdsCtrl as $ctrl">
     <!-- Left Section  -->
     <profile-nav-section></profile-nav-section>
 
     <!-- Right Section  -->
-    <banner-ads-list ></banner-ads-list>
+    <sponsor-ads-edit-main></sponsor-ads-edit-main>
   </div>
 </div>
