--- a/app/addListing/view.html
+++ b/app/addListing/view.html
@@ -10,7 +10,7 @@
             Contact Information:
           </h4>
           <div class="row">
-            <form name="addlistForm" enctype="multipart/form-data" ng-controller="addListingCtrl as $ctrl">
+            <form name="addlistForm" enctype="multipart/form-data">
               <input name="customertype" value="owner" type="hidden">
               <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
                 <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
