--- a/app/treatmentCenterDetail/inquiryFormCard/view.html
+++ b/app/treatmentCenterDetail/inquiryFormCard/view.html
@@ -41,7 +41,7 @@
         <label>Message:</label>
       </div>
       <div class="col-lg-8 col-md-12 col-sm-12 col-xs-12">
-        <textarea ng-model="$ctrl.message" rows="5" class="form-control required" placeholder="Message" name="message" ng-change="$ctrl.onMessageChange()"></textarea>
+        <textarea ng-model="$ctrl.message" rows="5" class="form-control required" placeholder="Message" name="message"></textarea>
       </div>
     </div>
 
