--- a/app/treatmentCenterMap/view.html
+++ b/app/treatmentCenterMap/view.html
@@ -4,7 +4,7 @@
     <div class="col-md-4 col-sm-4 col-xs-12 col-lg-4">
       <div class="sidebar_main">
         <form method="GET" action="#/treatment-center-map/" id="search_form" name="search_form223" __bizdiag="927742349" __biza="WJ__">
-          <input type="hidden" name="srch-keyword" value="">
+          <input type="hidden" name="srch-keyword" value="search">
           <div class="ul_wrapper_sidebar padding_0">
             <ul class="main_sidebar padding_0">
               <!--  category -->
@@ -140,23 +140,29 @@
       <div class="col-md-8 col-sm-8 col-xs-12 col-lg-8">
         <div class="heading_main_div">
           <h2>
-            <label>Treatment Centers </label>
+            <label>Treatment Centers</label>
           </h2>
         </div>
+        <div style="color:red;margin-left:10px;" class="ng-hide" id="no_results">No data Found.</div>
         <div class="col-md-12 col-sm-12 col-lg-12 col-xs-12 padding_0 listing_wrapper_inner">
 
-          <div class="col-lg-4 col-sm-6 col-md-4 col-xs-12" ng-repeat="listing in search_by_filter.data.listings">
-            <div class="listing_block">
-              <div class="block_img">
-                <a class="thumbnail" ng-href="#/treatment_center/{{listing.id}}/detail">
+          <div class="col-sm-6 col-xs-12 col-md-6 col-lg-6" ng-repeat="listing in search_by_filter">
+            <div class="listing_wrap">
+              <div class="img_under_block_outer">
+                <a ng-href="#/treatment_center/{{listing.id}}/detail">
                   <img class="" ng-src="{{ listing.listing_image}}"> </a>
               </div>
-              <div class="block_content">
-                <div class="block_heading">
-                  <h2 class="feat_head"><a ng-href="#/treatment_center/{{listing.id}}/detail">{{ listing.center_name}}</a></h2>
+              <div class="head_under_block">
+                <a href="#/treatment_center/{{listing.id}}/detail">
+                  <p class="text_style_under_block">{{ listing.center_name | limitTo:14}}...
+                  </p>
+                </a>
+                <div class="desc_under_block">
+                  <p> {{ listing.description | limitTo:100}} </p>
                 </div>
-                <p> {{ listing.description}} </p>
-              </div> <a ng-href="#/treatment_center/{{listing.id}}/detail">View Listing</a> </div>
+              </div>
+              <div class="detail_div_under_block"><a ng-href="#/treatment-center-detail/{{listing.id}}">More Details</a> </div>
+            </div>
           </div>
 
         </div>
