--- a/app/sponsorAds/add/main/view.html
+++ b/app/sponsorAds/add/main/view.html
@@ -67,14 +67,15 @@
                 <label for="cpwd">Sponsor Ads </label>
               </div>
               <div class="col-md-8 col-sm-8 col-xs-12">
-                <select name="$ctrl.sponsored_listing_layout_ids[]" ng-model="$ctrl.sponsored_listing_layout_ids" id="sposnor_ad_cat" class="required multiselect" multiple="multiple" title="Select (Price in $)">
+                <!-- <select name="$ctrl.sponsored_listing_layout_ids[]" ng-model="$ctrl.sponsored_listing_layout_ids" ng-dropdown-multiselect="" checkboxes="true" id="sposnor_ad_cat" class="required multiselect" multiple="multiple" title="Select (Price in $)">
                   <optgroup>
                     <option ng-repeat="normal in $ctrl.sponsored_ad_select_normal" value="{{normal.id}}">{{normal.name}}</option>
                   </optgroup>
                   <optgroup>
                     <option ng-repeat="normal in $ctrl.sponsored_ad_select_state" value="{{normal.id}}">{{normal.name}}</option>
                   </optgroup>
-                </select>
+                </select> -->
+                <div ng-dropdown-multiselect="" options="$ctrl.sponsored_ad_select" checkboxes="true" selected-model="$ctrl.multiselectModelLayoutIds " extra-settings="$ctrl.multiselectModelSettings"></div>
               </div>
             </div>
             <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
