--- a/app/sponsorHome/view.html
+++ b/app/sponsorHome/view.html
@@ -37,7 +37,13 @@
             </h1>
             <p>{{ $ctrl.entry.content_2 }}</p>
           </div>
-
+          <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
+            <div class="company_adds margin_top_25">
+              <div class="company_adds">
+                <img class="img-reponsive" id="footer_ad">
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
