--- a/app/index.html
+++ b/app/index.html
@@ -208,13 +208,13 @@
                   <!-- Sign In Form -->
                   <!-- Text input-->
                   <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 padding_0">
-                    <label for="userid" class="control-label font_weight_normal">E-mail:</label>
+                    <label for="userid" class="control-label font-normal">E-mail:</label>
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 padding_0">
                       <input type="text" placeholder="Email-id" class="form-control required" name="email" id="email" email="true">
                     </div>
                   </div>
                   <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 padding_0">
-                    <label for="pwd_modal" class="control-label font_weight_normal">Password:</label>
+                    <label for="pwd_modal" class="control-label font-normal">Password:</label>
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 padding_0">
                       <input type="password" placeholder="******" class="form-control required" name="password" id="pwd_modal">
                     </div>
@@ -223,7 +223,7 @@
                   <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 padding_0">
                     <label for="rememberme" class="control-label"></label>
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 padding_0">
-                      <label for="rememberme-0" class="inline font_weight_normal">
+                      <label for="rememberme-0" class="inline font-normal">
                         <input type="checkbox" class="checkbox_modal_g" value="Remember me" id="rememberme-0" name="rememberme"> Remember me
                       </label>
                     </div>
@@ -271,7 +271,7 @@
                   <!-- Sign In Form -->
                   <!-- Text input-->
                   <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 padding_0">
-                    <label for="userid" class="control-label font_weight_normal">E-mail:</label>
+                    <label for="userid" class="control-label font-normal">E-mail:</label>
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 padding_0">
                       <input type="text" placeholder="Email-id" class="form-control required email" name="forgot_email" id="forgot_email" email="true">
                     </div>
