--- a/app/sidePanel/findTreatmentSideCard/view.html
+++ b/app/sidePanel/findTreatmentSideCard/view.html
@@ -1,24 +1,21 @@
 <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12 padding_0">
-  <form method="GET" action="#/treatment-center-map/">
-    <input type="hidden" name="srch-keyword" ng-model="$ctrl.srchkeyword" value="search">
+  <form ng-submit="$ctrl.submit()">
     <div class="right_content">
       <h2>
         <label>Find Treatment</label>
       </h2>
       <div class="form-group">
-        <label for="State" class="font_weight_normal">Select State</label>
+        <label for="State" class="font-normal">Select State</label>
         <state-select on-update="$ctrl.onStateUpdate(selected)"></state-select>
       </div>
-      <p class="monali" style="font-weight: bold; text-align: center">
-        OR
-      </p>
+      <p class="font-bold text-center">OR</p>
       <div class="form-group">
-        <label for="zip" class="font_weight_normal">Enter Zipcode</label>
-        <input id="zip" class="form-control" type="text" name="zip" />
+        <label for="zip" class="font-normal">Enter Zipcode</label>
+        <input ng-model="$ctrl.zipcode" class="form-control" type="text" />
       </div>
       <div class="form-group">
-        <label for="miles" class="font_weight_normal">Enter Miles</label>
-        <select id="miles" class="form-control selectpicker" name="distance">
+        <label for="miles" class="font-normal">Select Miles</label>
+        <select ng-model="$ctrl.miles" class="form-control">
           <option selected value="">Select Miles</option>
           <option value="10">10 miles</option>
           <option value="50">50 miles</option>
@@ -28,7 +25,7 @@
         </select>
       </div>
       <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12 text-center margin_bottom_15">
-        <input type="submit" class="btn btn-primary border_radius_add modal_btn" value="submit" name="center_filter" />
+        <input type="submit" class="btn btn-primary border_radius_add modal_btn" value="submit" />
       </div>
     </div>
   </form>
