--- a/app/treatmentCenterMap/view.html
+++ b/app/treatmentCenterMap/view.html
@@ -3,8 +3,7 @@
     <!-- Left Section -->
     <div class="col-md-4 col-sm-4 col-xs-12 col-lg-4">
       <div class="sidebar_main">
-        <form method="GET" action="#/treatment-center-map/" id="search_form" name="search_form223" __bizdiag="927742349" __biza="WJ__">
-          <input type="hidden" name="srch-keyword" value="search">
+        <form ng-submit="$ctrl.submit()" __bizdiag="927742349" __biza="WJ__">
           <div class="ul_wrapper_sidebar padding_0">
             <ul class="main_sidebar padding_0">
               <!--  category -->
@@ -16,27 +15,25 @@
                       <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 form_wrap_margin new_class_for_label">
 
                         <div class="col-md-6 col-sm-6 col-xs-12">
-                          <input class="form-control category" value="1" name="catg[]" type="checkbox">
-                          <label for="cat1" class="inline">
-                            Inpatient </label>
+                          <label for="catg1" class="checkbox-inline">
+                            <input ng-model="$ctrl.catg1" value="1" type="checkbox">Inpatient
+                          </label>
                         </div>
 
                         <div class="col-md-6 col-sm-6 col-xs-12">
-                          <input class="form-control category" value="2" name="catg[]" type="checkbox">
-                          <label for="cat1" class="inline">
-                            Outpatient </label>
+                          <label for="catg2" class="checkbox-inline">
+                            <input ng-model="$ctrl.catg2" value="2" type="checkbox">Outpatient
+                          </label>
                         </div>
-
                         <div class="col-md-6 col-sm-6 col-xs-12">
-                          <input class="form-control category" value="3" name="catg[]" type="checkbox">
-                          <label for="cat1" class="inline">
-                            Sober Living </label>
+                          <label for="catg3" class="checkbox-inline">
+                            <input ng-model="$ctrl.catg3" value="3" type="checkbox">Sober Living
+                          </label>
                         </div>
-
                         <div class="col-md-6 col-sm-6 col-xs-12">
-                          <input class="form-control category" value="4" name="catg[]" type="checkbox">
-                          <label for="cat1" class="inline">
-                            Adolescent </label>
+                          <label for="catg4" class="checkbox-inline">
+                            <input ng-model="$ctrl.catg4" value="4" type="checkbox">Adolescent
+                          </label>
                         </div>
                         <div class="clearfix"></div>
                       </div>
@@ -55,43 +52,39 @@
                           <label for="state"> State: </label>
                         </div>
                         <div class="col-md-12 col-sm-12 col-xs-12 padding_0">
-                          <select name="state" ng-model="$ctrl.state" class="form-control">
-                            <option value="">Select State</option>
-                            <option ng-repeat="states in $ctrl.states track by $index" value="{{states}}">{{states}}</option>
-                          </select>
-
+                          <state-select on-update="$ctrl.onFormStateSelect(selected)"></state-select>
                         </div>
-                        <p class="monali" style="font-weight: bold; text-align: center"> OR</p>
+                        <p class="font-bold text-center">OR</p>
                       </div>
                       <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 form_wrap_margin">
                         <div class="col-md-12 col-sm-12 col-xs-12 padding_0">
-                          <label for="zip"> Zipcode: </label>
+                          <label for="zip">Zipcode:</label>
                         </div>
                         <div class="col-md-12 col-sm-12 col-xs-12 padding_0">
-                          <input type="text" class="form-control zip" value="" name="zip" id="zip" placeholder="">
+                          <input ng-model="$ctrl.zipcode" type="text" class="form-control" placeholder="" />
                         </div>
                       </div>
                       <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 form_wrap_margin">
                         <div class="col-md-12 col-sm-12 col-xs-12 padding_0">
-                          <label for="miles"> Select Miles: </label>
+                          <label for="miles">Select Miles:</label>
                         </div>
                         <div class="col-md-12 col-sm-12 col-xs-12 padding_0">
-                          <select id="miles" name="distance" class="form-control selectpicker miles">
+                          <select ng-model="$ctrl.miles" class="form-control">
                             <option selected="" value="">Select Miles</option>
                             <option value="10">10 miles</option>
                             <option value="20">20 miles</option>
                             <option value="50">50 miles</option>
                             <option value="100">100 miles</option>
                             <option value="250">250 miles</option>
-                            <option selected="" value="">Unlimited</option>
+                            <option alue="">Unlimited</option>
                           </select>
 
                         </div>
                       </div>
                     </div>
                   </li>
-                  <li id="ajax_submit">
-                    <input type="submit" name="center_filter" class="btn btn-primary border_radius_add modal_btn text-center" value="submit">
+                  <li>
+                    <input type="submit" class="btn btn-primary border_radius_add modal_btn text-center" value="submit" />
                   </li>
                 </ul>
               </li>
@@ -110,64 +103,6 @@
         </div>
       </div>
     </div>
-    <div ng-if="hide_map == 'show'">
-      <!-- Right Section  -->
-      <div class="col-md-8 col-sm-8 col-xs-12 col-lg-8 text_deco">
-        <label> Begin your search by clicking on the state you're considering going to treatment in, or using the advanced search on the left </label>
-      </div>
-
-      <div class="col-md-8 col-sm-8 col-xs-12 col-lg-8">
-        <div class="heading_main_div">
-          <h2>
-            <label>Treatment Centers </label>
-          </h2>
-          <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12"></div>
-          <!--- Map content  Start   -->
-          <div class="col-md-12 col-sm-12 col-lg-12 col-xs-12">
-            <div onselectstart="return false;" class="unselectable">
-              <div id="mapwrapper">
-                <div id="map_base">
-                  <state-map></state-map>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!--- Map content End -->
-        </div>
-      </div>
-    </div>
-    <div ng-if="hide_map == 'hide'">
-      <div class="col-md-8 col-sm-8 col-xs-12 col-lg-8">
-        <div class="heading_main_div">
-          <h2>
-            <label>Treatment Centers</label>
-          </h2>
-        </div>
-        <div style="color:red;margin-left:10px;" class="ng-hide" id="no_results">No data Found.</div>
-        <div class="col-md-12 col-sm-12 col-lg-12 col-xs-12 padding_0 listing_wrapper_inner">
-
-          <div class="col-sm-6 col-xs-12 col-md-6 col-lg-6" ng-repeat="listing in search_by_filter">
-            <div class="listing_wrap">
-              <div class="img_under_block_outer">
-                <a ng-href="#/treatment_center/{{listing.id}}/detail">
-                  <img class="" ng-src="{{ listing.listing_image}}"> </a>
-              </div>
-              <div class="head_under_block">
-                <a href="#/treatment_center/{{listing.id}}/detail">
-                  <p class="text_style_under_block">{{ listing.center_name | limitTo:14}}...
-                  </p>
-                </a>
-                <div class="desc_under_block">
-                  <p> {{ listing.description | limitTo:100}} </p>
-                </div>
-              </div>
-              <div class="detail_div_under_block"><a ng-href="#/treatment-center-detail/{{listing.id}}">More Details</a> </div>
-            </div>
-          </div>
-
-        </div>
-      </div>
-
-    </div>
+    <ui-view></ui-view>
   </div>
 </div>
