--- a/app/treatmentCenterMap/view.html
+++ b/app/treatmentCenterMap/view.html
@@ -76,7 +76,7 @@
                             <option value="50">50 miles</option>
                             <option value="100">100 miles</option>
                             <option value="250">250 miles</option>
-                            <option alue="">Unlimited</option>
+                            <option value="">Unlimited</option>
                           </select>
 
                         </div>
