--- a/app/treatmentCenterMap/centerListBox/view.html
+++ b/app/treatmentCenterMap/centerListBox/view.html
@@ -11,11 +11,11 @@
       <div class="col-sm-6 col-xs-12 col-md-6 col-lg-6" ng-repeat="listing in $ctrl.listings">
         <div class="listing_wrap">
           <div class="img_under_block_outer">
-            <a ng-href="#/treatment_center/{{listing.id}}/detail">
+            <a ng-href="#/treatment-center-detail/{{listing.id}}">
               <img class="" ng-src="{{ listing.listing_image}}"> </a>
           </div>
           <div class="head_under_block">
-            <a href="#/treatment_center/{{listing.id}}/detail">
+            <a href="#/treatment-center-detail/{{listing.id}}">
               <p class="text_style_under_block">{{ listing.center_name | limitTo:14}}...
               </p>
             </a>
