--- a/app/addListing/view.html
+++ b/app/addListing/view.html
@@ -3,9 +3,7 @@
     <div class="row">
       <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
         <div class="left_content">
-          <h1 class="section-heading">
-            <label>Sign Up</label>
-          </h1>
+          <section-heading>Sign Up</section-heading>
           <h4 class="sub_heading_under_sign_up">
             Contact Information:
           </h4>
