--- a/app/home/featuredTreatmentCenter/view.html
+++ b/app/home/featuredTreatmentCenter/view.html
@@ -1,7 +1,5 @@
 <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
-  <h1 class="section-heading">
-    <label>Featured Treatment Center</label>
-  </h1>
+  <section-heading>Featured Treatment Center</section-heading>
 </div>
 <div class="col-lg-4 col-sm-6 col-md-4 col-xs-12" ng-repeat="listing in $ctrl.listings">
   <div class="listing_block">
