--- a/app/home/searchByState/view.html
+++ b/app/home/searchByState/view.html
@@ -1,7 +1,5 @@
 <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
-  <h1 class="section-heading">
-    <label>Search By State</label>
-  </h1>
+  <section-heading>Search By State</section-heading>
 </div>
 <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
   <!--- Map content  Start   -->
