--- a/app/sponsorHome/locationListingBox/view.html
+++ b/app/sponsorHome/locationListingBox/view.html
@@ -1,7 +1,7 @@
 <div class="left_content">
-  <h1 class="section-heading">
-    <label>Browse the Best Rehabs in {{ $ctrl.stateName }}</label>
-  </h1>
+  <section-heading>
+    Browse the Best Rehabs in {{ $ctrl.stateName }}
+  </section-heading>
   <section>
     <ul class="list-locations list-columns">
       <li ng-repeat="city in $ctrl.places track by $index">
