--- a/app/sponsorHome/sponsorListingBox/view.html
+++ b/app/sponsorHome/sponsorListingBox/view.html
@@ -3,9 +3,7 @@
     <p class="sponsor-listing-error-text">Oops! We are currently unable to provide any listings at this area. Sorry for any inconvenience.</p>
   </div>
   <div ng-hide="$ctrl.displayError" class="sponsor-listing">
-    <h1 class="section-heading">
-      <label>{{ $ctrl.entry.heading_1 }}</label>
-    </h1>
+    <section-heading>{{ $ctrl.entry.heading_1 }}</section-heading>
     <p>{{ $ctrl.entry.content_1 }}</p>
 
     <div class="row">
@@ -34,9 +32,7 @@
 
       <!-- Second section of the listing-->
       <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
-        <h1 class="section-heading">
-          <label>{{ $ctrl.entry.heading_2 }}</label>
-        </h1>
+        <section-heading>{{ $ctrl.entry.heading_2 }}</section-heading>
         <p>{{ $ctrl.entry.content_2 }}</p>
       </div>
 
