--- a/app/header/view.html
+++ b/app/header/view.html
@@ -18,7 +18,9 @@
       </div>
     </div>
     <div class="col-lg-7 col-md-7 col-sm-7 col-xs-12">
-      <img class="img-responsive" id="header_ad" alt="Header advertisement">
+      <a id="header_ad_url">
+        <img class="img-responsive" id="header_ad" alt="Header advertisement">
+      </a>
     </div>
   </div>
 </div>
