--- a/app/myProfile/profileNavSection/view.html
+++ b/app/myProfile/profileNavSection/view.html
@@ -21,7 +21,9 @@
   <!--  sidebar main ends  -->
   <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12 padding_0 ">
     <div class="banner_adjust">
-      <img class="img-responsive" id="sidebar_ad">
+      <a id="sidebar_ad_url">
+        <img class="img-responsive" id="sidebar_ad">
+      </a>
     </div>
   </div>
 
