--- a/app/sidePanel/view.html
+++ b/app/sidePanel/view.html
@@ -4,7 +4,9 @@
   <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12 padding_0">
     <div class="right_content">
       <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12 padding_0 ">
-        <img class="img-responsive" id="sidebar_ad">
+        <a id="sidebar_ad_url">
+          <img class="img-responsive" id="sidebar_ad">
+        </a>
       </div>
     </div>
   </div>
