--- a/app/myProfile/paymentDetails/add/view.html
+++ b/app/myProfile/paymentDetails/add/view.html
@@ -134,7 +134,7 @@
         <!-- Submit -->
         <div class="adn-row">
           <div class="text-right col-md-12 col-sm-12 col-xs-12 col-lg-12 main_wrap_form_inner_sub sub">
-            <button type="button" ng-click="$ctrl.submit()" class="btn modal_btn btn_size pull-right" value="Next" id="submit" ng-disabled="paymentDetailsForm.card.$invalid || ($ctrl.totalDigits<19) ||  paymentDetailsForm.year.$invalid || paymentDetailsForm.month.$invalid || $ctrl.validMonth===0 || paymentDetailsForm.cvv.$invalid || paymentDetailsForm.firstName.$invalid || paymentDetailsForm.middleName.$invalid || paymentDetailsForm.lastName.$invalid || paymentDetailsForm.state.$invalid || paymentDetailsForm.city.$invalid || paymentDetailsForm.country.$invalid|| paymentDetailsForm.zip.$invalid || paymentDetailsForm.address.$invalid">Submit</button>
+            <button type="button" ng-click="$ctrl.submit()" class="btn modal_btn btn_size pull-right" value="Next" id="submit" ng-disabled="paymentDetailsForm.card.$invalid || ($ctrl.totalDigits != 16 && $ctrl.cardType != 'amex') || ($ctrl.totalDigits != 15 && $ctrl.cardType == 'amex') ||  paymentDetailsForm.year.$invalid || paymentDetailsForm.month.$invalid || $ctrl.validMonth===0 || paymentDetailsForm.cvv.$invalid || paymentDetailsForm.firstName.$invalid || paymentDetailsForm.middleName.$invalid || paymentDetailsForm.lastName.$invalid || paymentDetailsForm.state.$invalid || paymentDetailsForm.city.$invalid || paymentDetailsForm.country.$invalid|| paymentDetailsForm.zip.$invalid || paymentDetailsForm.address.$invalid">Submit</button>
           </div>
         </div>
       </form>
