--- a/app/addListing/centerInfo/view.html
+++ b/app/addListing/centerInfo/view.html
@@ -84,7 +84,7 @@
         <label>State</label>
       </div>
       <div class="col-md-8 col-sm-8 col-xs-12">
-        <select required="true" ng-change="$root.getCities(); $ctrl.testZip()" name="state" ng-model="$root.state">
+        <select required="true" ng-change="$root.getCities();" name="state" ng-model="$root.state">
           <option value="">Select State</option>
           <option ng-repeat="states in $root.states track by $index" value="{{states | uppercase}}">{{states | uppercase}}</option>
         </select>
